--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node Yuli Sotnikov 208471391 Ravit Suissa 207386491 app.js",
+    "start": "node \"Yuli Sotnikov 208471391 Ravit Suissa 207386491 app.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
